test/kind/wrong/type7.kk.out
test/kind/wrong/type7.kk(2, 6): error: invalid syntax
 unexpected identifier "a"
 expecting type name, "[", "(" or "<"